--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles/macchiato_index.css">
     <script src="scripts/programming_languages_and_projects.js" defer></script>
     <script src="scripts/index.js" defer></script>
     <title>Alessandro Picone - Portfolio</title>
