Refactor programming languages section in index.html, update project details in programming_languages_and_projects.js, add new Python weather project image, and enhance CSS styles for project images in latte_index.css and macchiato_index.css.

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </section>
 
     <section id="Programming_Languages" class="Programming_Languages-section">
-        <h2>Programming Languages</h2>
+        <h2>Programming languages</h2>
         <div class="programming-languages-carousel">
             <div class="side-box" id="left-box"></div>
             <button class="arrow" id="prev-arrow">&#8249;</button>
