--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles/macchiato_index.css">
     <script src="scripts/programming_languages_and_projects.js" defer></script>
     <script src="scripts/index.js" defer></script>
+    <script src="scripts/forum.js" defer></script>
     <title>Alessandro Picone - Portfolio</title>
 </head>
 <body>
