--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="scripts/programming_languages_and_projects.js" defer></script>
     <script src="scripts/index.js" defer></script>
     <script src="scripts/forum.js" defer></script>
+    <script src="scripts/observer.js" defer></script>
     <title>Alessandro Picone - Portfolio</title>
 </head>
 <body>
