Update skill levels in index.html and modify project link in programming_languages_and_projects.js

--- a/index.html
+++ b/index.html
@@ -54,37 +54,39 @@
                     <th class="col0">Skill</th>
                     <th class="col1">Level</th>
                 </tr>
+                <!-- Beginner Skills -->
                 <tr class="row1">
-                    <td class="col0">Java</td>
-                    <td class="col1">intermediate</td>
-                </tr>
-                <tr class="row2">
-                    <td class="col0">Python</td>
-                    <td class="col1">intermediate</td>
-                </tr>
-                <tr class="row3">
                     <td class="col0">JavaScript</td>
                     <td class="col1">Beginner</td>
                 </tr>
-                <tr class="row4">
+                <tr class="row2">
                     <td class="col0">Rust</td>
                     <td class="col1">Beginner</td>
                 </tr>
-                <tr class="row5">
+                <tr class="row3">
                     <td class="col0">Ruby</td>
                     <td class="col1">Beginner</td>
                 </tr>
-                <tr class="row6">
-                    <td class="col0">Git</td>
-                    <td class="col1">intermediate</td>
-                </tr>
-                <tr class="row7">
+                <tr class="row4">
                     <td class="col0">Docker</td>
                     <td class="col1">Beginner</td>
                 </tr>
+                <!-- Intermediate Skills -->
+                <tr class="row5">
+                    <td class="col0">Java</td>
+                    <td class="col1">intermediate</td>
+                </tr>
+                <tr class="row6">
+                    <td class="col0">Python</td>
+                    <td class="col1">intermediate</td>
+                </tr>
+                <tr class="row7">
+                    <td class="col0">Git</td>
+                    <td class="col1">intermediate</td>
+                </tr>
             </table>
         </div>
-    </section>
+    </section>    
 
     <section id="Programming_Languages" class="Programming_Languages-section">
         <h2>Programming Languages and Projects</h2>
