--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="scripts/index.js" defer></script>
     <script src="scripts/forum.js" defer></script>
     <script src="scripts/observer.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js" defer></script>
+    <script src="scripts/contact.js" defer></script>
     <title>Alessandro Picone - Portfolio</title>
 </head>
 <body>
