--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/macchiato_index.css">
+    <link id="theme-stylesheet" rel="stylesheet" href="styles/macchiato_index.css">
     <script src="scripts/programming_languages_and_projects.js" defer></script>
     <script src="scripts/index.js" defer></script>
     <script src="scripts/forum.js" defer></script>
     <script src="scripts/observer.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js" defer></script>
     <script src="scripts/contact.js" defer></script>
+    <script src="scripts/theme.js" defer></script>
     <title>Alessandro Picone - Portfolio</title>
 </head>
 <body>
@@ -23,6 +24,7 @@
             <a href="#contact" class="nav-link">Contact</a>
         </nav>
         <div class="menu-toggle">&#9776;</div>
+        <button id="theme-toggle" aria-label="Toggle Theme">🌙</button>
     </header>    
     
     <section id="home" class="introduction">
