Revise personal introduction and about me sections in index.html: Update descriptions to reflect a stronger focus on software programming and artificial intelligence, highlighting recent projects in web scraping, automation, and machine learning.

--- a/index.html
+++ b/index.html
@@ -30,21 +30,14 @@
     <section id="home" class="introduction">
         <div class="intro-container">
             <h1>Hello, I'm Alessandro Picone</h1>
-            <p>I'm a passionate student developer with a keen interest in creating innovative solutions. Currently pursuing my studies, I'm dedicated to honing my skills and bringing creative ideas to life through code.</p>
+            <p>I am a dedicated high school student with a strong passion for software programming and artificial intelligence. I have developed projects in web scraping, automation, and machine learning, including a Rust-based Discord bot for Amazon product scraping and affiliate marketing, as well as a PyTorch deep learning model to classify real vs. AI-generated images.</p>
             <a href="#skills" class="cta-button">View My Skills</a>
         </div>
     </section>    
     
     <section id="about" class="about-section">
         <h2>About Me</h2>
-        <p>I am a high school student deeply passionate about technology, particularly AI
-            and game development. Beyond academics, I practices in 10m air shooting and
-            have a background in karate, swimming, and tennis, instilling in me discipline
-            and resilience. Proficient in Java, Python, and Git, but I also know JavaScript, Rust
-            also I'm constantly exploring new programming techniques. With strong
-            communication and teamwork skills, I thrive in collaborative environments. I'm
-            eager to contribute to the dynamic realm of technology, making strides in AI and
-            game development.</p>
+        <p>I'm a driven high school student with a keen interest in software programming and artificial intelligence and a desire to work in the field of technology. Having come into contact with different programming languages such as Python, Rust, and Java, I have experimented with different projects in web scraping, automation, and machine learning. Recent ones involve Amazon product scraping and affiliate marketing with a Discord bot created using Rust and a deep learning model in PyTorch to differentiate between real images and images made from artificial intelligences. I perform well in tough tasks, new and new tech researches and implementing new and innovative methods in problem-solving in real life. I wish to further advance the synergy between artificial intelligence and software programming and to be a productive contributor to the tech field.</p>
     </section>
 
     <section id="skills" class="skills-section">
