--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <a href="#skills" class="nav-link">Skills</a>
             <a href="#Programming_Languages" class="nav-link">Programming languages & projects</a>
             <a href="#contact" class="nav-link">Contact</a>
+            <a href="#download" class="nav-link">Download Resume</a>
         </nav>
         <div class="menu-toggle">&#9776;</div>
         <button id="theme-toggle" aria-label="Toggle Theme">🌙</button>
@@ -118,6 +119,13 @@
             <button type="submit">Send Message</button>
         </form>
     </section>
+
+    <section id="download" class="download-section">
+        <h2>Download Resume</h2>
+        <a href="assets/resume.pdf" download class="download-button">
+            <i class="fa fa-download"></i> Download PDF Resume
+        </a>
+    </section>    
 
     <footer class="footer-container">
         <div class="footer-content">
